# ModellConverter

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build-all.sh
src/: cli.rs  convert.rs  error.rs  format.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/formats/: mod.rs
src/formats/edgetx/: mod.rs  parser.rs  schema.rs  serializer.rs
src/formats/ethos/: known_offsets.rs  mod.rs  parser.rs  schema.rs  serializer.rs
src/formats/jeti/: mod.rs  parser.rs  schema.rs  serializer.rs
src/formats/jeti/testdata/: 0001Stre.jsn
src/ir/: model.rs
src/reveng/: diff.rs  hexdump.rs  mod.rs
tests/: convert_batch_dir.rs  convert_batch_zip.rs  convert_edgetx_roundtrip.rs  convert_ethos_roundtrip.rs  convert_jeti_roundtrip.rs
tests/fixtures/: sample_edgetx.yml  sample_jeti.jsn
ui/: app.js  index.html  style.css
