[package]
name = "modell-converter"
version = "0.1.0"
edition = "2021"

[lib]
name = "modell_converter"
path = "src/lib.rs"

[[bin]]
name = "modell-converter"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
serde_json = "1"
anyhow = "1"
thiserror = "2"
binrw = "0.15"
colored = "2"
hex = "0.4"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
