[package]
name = "modellconverter-gui"
version = "0.1.0"
edition = "2021"

[lib]
name = "modellconverter_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "modellconverter-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
modell-converter = { path = "../" }

[target.'cfg(windows)'.dependencies]
webview2-com = "0.19"
